tests/miniJava/neg/005361_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { this int [] java ( ) { return 0 ; } }
